staff dept alignment issues

--- a/src/out_patients/modules/staff-dept/staff-dept.component.scss
+++ b/src/out_patients/modules/staff-dept/staff-dept.component.scss
@@ -1,3 +1,34 @@
+.bg-dept{
+    background-color: #F6F6F6;
+    color:#004084;
+}
+
+.iconcss {
+
+    ::ng-deep {
+
+        position: absolute !important;
+
+        padding: 1px !important;
+
+        border-radius: 4px !important;
+
+        left: 1px !important;
+
+    }
+}
+
+.serachcss{
+
+    ::ng-deep .max-table-wrapper{
+
+        border-radius: 0.75rem;
+
+        border: 1px solid #707070 !important;
+
+    }
+}
+
 .employeeclass{
     color: #004084;
     font:Proxima Nova;
